# Rabbit_AGENT

./: Codebase-Structure.md  DEPLOYMENT-GUIDE.md  README.md  SECURITY-POLICY.md  blockchain  framework structure
ai-engine/local-inference/src/: secure_engine.rs
communication/: p2p.py
communication/api-gateway/: Cargo.toml
communication/api-gateway/src/: main.rs  metrics.rs  ratelimit.rs
communication/p2p-messaging/: discovery.py
communication/p2p-messaging/src/: lib.rs
config/blockchain-nodes/: Cargo.toml  bridge.rs
config/blockchain-nodes/contracts/: InteropVerifier.sol
config/blockchain-nodes/src/: gas.rs  multichain.rs  state_proof.rs
config/edge-devices/: Cargo.toml  requirements.txt
config/edge-devices/src/: attestation.rs  failover.rs  model_distillation.py  (+2 more)
core/ agent-scheduler/: Cargo.toml  SchedulerVerifier.sol  constraint_solver.py
core/ agent-scheduler/src/: cache.rs  fault_detection.rs  reputation.rs
core/ agent-scheduler/src/core/: scheduler.rs
core/ agent-scheduler/src/resource/: allocator.rs
core/tee-bridge/: Cargo.toml  secure_channel.rs
core/tee-bridge/contracts/: EnclaveRegistry.sol
core/tee-bridge/src/: attestation.rs  failover.rs  memory.rs
core/tee-bridge/src/sgx/: mod.rs
core/zkp-verifier/: Cargo.toml
infrastructure/key-vault/: Cargo.toml
infrastructure/key-vault/contracts/: KeyRegistry.sol
infrastructure/key-vault/src/audit/: logger.rs
infrastructure/key-vault/src/core/: secure_storage.rs
infrastructure/key-vault/src/crypto/: ecdsa.rs  multisig.rs  secure_enclave.rs
infrastructure/key-vault/src/hsm/: mod.rs
infrastructure/key-vault/src/policies/: rotation.rs
infrastructure/key-vault/src/recovery/: shamir.rs
(+37 files in other folders)
