[package]
name = "tee-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
sgx_urts = { version = "1.1.6", features = ["untrusted"] }
sgx_types = { version = "1.1.6" }
sgx_quote = { version = "0.1.0" }
sgx_dcap = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
openssl = "0.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
