[package]
name = "key-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
secrecy = "0.8"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["aes"] }
threshold-bls = "0.4"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
parity-scale-codec = "3.0"
